--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#DADCE0</color>
-    <color name="colorAccent">#E0E0E0</color>
-    <color name="toolbarIconColor">#FFFFFF</color>
+    <color name="colorPrimary">#74CEEA</color> //379AEA
+    <color name="colorPrimaryDark">#9BDAF3</color>
+    <color name="colorAccent">#9FD7E8</color>
+    <color name="textColorPrimary">#2C3A44</color>
+    <color name="toolbarIconColor">@color/textColorPrimary</color>
     <color name="loginPageBackgroundColor">#FFFFFF</color>
     <color name="productGridBackgroundColor">#FFFFFF</color>
+
+    <color name="textInputOutlineColor">#83BAE4</color>
 </resources>
